kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sap
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shahir5890/frontend:10
        ports:
        - containerPort:  80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sap
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port:  80
    targetPort:  80
