kubernetes/service-address.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address
  namespace: sap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address
  template:
    metadata:
      labels:
        app: address
    spec:
      containers:
      - name: address
        image: shahir5890/backend_address:10
        ports:
        - containerPort: 3008
---
apiVersion: v1
kind: Service
metadata:
  name: address
  namespace: sap
spec:
  type: ClusterIP
  selector:
    app: address
  ports:
  - port: 3008
    targetPort: 3008
