kubernetes/service-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: sap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: shahir5890/backend_auth:3
        ports:
        - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: sap
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - port: 3010
    targetPort: 3010
