kubernetes/service-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: sap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: shahir5890/backend_cart:10
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: sap
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 3002
    targetPort: 3002
