kubernetes/service-helpcenter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpcenter
  namespace: sap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpcenter
  template:
    metadata:
      labels:
        app: helpcenter
    spec:
      containers:
      - name: helpcenter
        image: shahir5890/backend_helpcenter:16
        ports:
        - containerPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: helpcenter
  namespace: sap
spec:
  type: ClusterIP
  selector:
    app: helpcenter
  ports:
  - port: 3007
    targetPort: 3007
