kubernetes/service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: sap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels: 
        app: notifications
    spec:
      containers:
        - image: shahir5890/backend_notifications:11
          name:  notifications
          ports:
          - containerPort: 3003
---
kind: Service
apiVersion: v1
metadata:
  name:  notifications
  namespace: sap
spec:
  selector:
    app:  notifications
  type:  ClusterIP
  ports:
  - port:  3003
    targetPort:  3003
