kubernetes/service-orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  orders
  namespace: sap
spec:
  selector:
    matchLabels:
      app: orders
  replicas: 2
  template:
    metadata:
      labels:
        app:  orders
    spec:
      containers:
      - name:  orders
        image:  orders:latest
        ports:
        - containerPort:  3005
---
kind: Service
apiVersion: v1
metadata:
  name:  orders
  namespace: sap
spec:
  selector:
    app:  orders
  type:  ClusterIP
  ports:
  - port:  3005
    targetPort:  3005
