kubernetes/service-payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  payment
  namespace: sap
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 2
  template:
    metadata:
      labels:
        app:  payment
    spec:
      containers:
      - name:  payment
        image: shahir5890/backend_payments:7
        ports:
        - containerPort:  3006
---
kind: Service
apiVersion: v1
metadata:
  name:  payment
  namespace: sap
spec:
  selector:
    app:  payment
  type:  ClusterIP
  ports:
  - port:  3006
    targetPort:  3006
