kubernetes/service-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  profile
  namespace: sap
spec:
  selector:
    matchLabels:
      app: profile
  replicas: 1
  template:
    metadata:
      labels:
        app:  profile
    spec:
      containers:
      - name:  profile
        image: shahir5890/backend_profile:3
        ports:
        - containerPort:  3001
---
kind: Service
apiVersion: v1
metadata:
  name:  profile
  namespace: sap
spec:
  selector:
    app:  profile
  type:  ClusterIP
  ports:
  - port:  3001
    targetPort:  3001
