kubernetes/service-reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  reviews
  namespace: sap
spec:
  selector:
    matchLabels:
      app: reviews
  replicas: 1
  template:
    metadata:
      labels:
        app:  reviews
    spec:
      containers:
      - name:  reviews
        image: shahir5890/backend_reviews:10
        ports:
        - containerPort:  3009
---
apiVersion: v1
kind: Service
metadata:
  name:  reviews
  namespace: sap
spec:
  selector:
    app:  reviews
  type:  ClusterIP
  ports:
  - port:  3009
    targetPort:  3009
