kubernetes/service-wishlist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wishlist
  namespace: sap
spec:
  selector:
    matchLabels:
      app: wishlist
  replicas: 1
  template:
    metadata:
      labels:
        app:  wishlist
    spec:
      containers:
      - name:  wishlist
        image: shahir5890/backend_wishlist:8
        ports:
        - containerPort:  3004
---
apiVersion: v1
kind: Service
metadata:
  name:  wishlist
  namespace: sap
spec:
  selector:
    app:  wishlist
  type:  ClusterIP
  ports:
  - port:  3004
    targetPort:  3004
